--- a/cs492a-operating-systems/notes/20190122.md
+++ b/cs492a-operating-systems/notes/20190122.md
@@ -1,1 +1,104 @@
 # 20190122
+
+## Professor
+* Antonio Barbalace - abarbala@stevens.edu
+* http://www.cs.stevens.edu/~abarbala
+* Office hours Tuesday 4:30-6:30 NB 204
+
+### CAs
+* Thomas Pyle
+* David Sevilla
+
+## Objectives
+* Intro to basic components of operating systems
+  * Process/thread management
+  * Memory management
+  * I/O
+  * File system
+* Advanced topics
+  * Linux internals
+
+## Outcomes
+### First half
+* Process-to-OS communication
+* Multi-thread programming
+* Syschronization
+### Second half
+* Virtual memory abstraction
+* I/O abstraction
+* File system algorithmms
+
+## Important points
+* Ask questions whenever - class, breaks, office hours, email
+  * If HW is too long or wrong, to clarify a topic
+* Course modified significantly from previous years - some stuff replaced but roughly the same material
+* Lectures may not follow the textbook closely
+* Lecture notes on canvas before class
+  * Parts will be blank and filled in during class
+
+## Schedule
+* Two labs, two HWs, midterm, spring break, two team assignments, final
+  * Lab assignment is something to do on a linux VM - plenty of time to do, due by spring break to show CA in class and then submit
+  * Teams(2 people) for team assignments determined before spring break
+
+## Grading
+* Quizzes(4) - 6% - for attendance
+* Individual labs(2) - 12%
+* Homeworks(2) - 12%
+* Team assignments(2) - 20%
+* Midterm - 25%
+* Final - 25%
+  * Optional if you have over 90%
+* Extra credit projects - 5%
+
+### Policies
+* In class labs - bring laptops
+* Assignments - no collaboration
+* Late submissions get -25% for every day late, not more than 90% off
+
+## What is an OS?
+* Modern computer has processors, memory, disks, IO devices
+  * Managing these components requires a layer of software called the *operating systems*
+* OS sits between the hardware and the software - the user usually uses an interface for the program, which in turn interacts with the operating system
+  * *System software* is everything between the application and hardware - from compiler/runtime through the OS and to the hypervisor
+
+### Functions
+* Extended machine - top-down view
+  > OSs turn ugle hardware in beautiful abstractions
+* Resource manager - bottom-up view
+  * Allow multiple processes to run at the same time
+
+### Modes
+* *User mode* runs application, compiler, runtime, UI, and core runtime libraries
+* *Kernel mode* runs kernel and hypervisor code
+
+## Types of computers
+* Mainframes
+  * Puts CPU/memory in one machine and IO/devices in another one
+* Servers
+* Workstation/desktop
+* Laptop
+* Tablet
+* Mobile
+* Embedded
+
+## History
+* 1945-1955: Vacuum tubes
+* 1955-1965: Transistors and batch systems
+* 1067-1980: ICs and Multiprogramming
+* 1980-1990: Personal computers
+* 1990-Present: Mobile computers
+
+## Pre-OS
+* ENIAC 1943
+  * Big calculator
+  * Programmed by moving cable connections
+* IBM OS/360 for mid-ranged and large companies
+  * Needed an OS - Multics is first OS with security and hierarchical file system
+  * Multics spawned UNIX from Thompson and Ritchie
+* Minicomputers - 1980+
+  * Personal computers, initially limited hardware but eventually became more powerful
+    * OS starts as subroutine library but expands out to include everything we now consider part of the OS
+  * MSDOS = MicroSoft Disc Operating System
+  * Rise of personal computers brings the graphical user interface
+* Mobile era - Android and iOS, more powerful and user-friendly embedded systems(Raspberry Pi, Arduino)
