--- a/cs492a-operating-systems/hw/01.md
+++ b/cs492a-operating-systems/hw/01.md
@@ -4,17 +4,41 @@
 ## Problem 1
 **Consider a multiprogrammed system with degree of 6 (i.e., six programs in memory at the same time). Assume that each process spends 40% of its time waiting for I/O. What will be the CPU utilization?**
 
+Utilization = $1-p^n$
+$p=0.4$
+$n=6$
+Utilization = $1-0.4^6$
+Utilization = $0.995904$
+
 ## Problem 2
 **What are the benefits of threads vs processes? What is the biggest advantage of implementing threads in user space? What is the biggest disadvantage?**
+
+Threads can share memory within a process, so multiple threads can work together on a given task. Threads come with the advantage of being able to efficiently perform asynchronous tasks within a process. Threads come with a downside of adding a concerns about coordination with a shared memory space.
 
 ## Problem 3
 **Assume we have a system with a single-core CPU. Multiple jobs can run in parallel (multiprogramming) and finish faster than if they had run sequentially. Suppose that two jobs, each needing 20 minutes of CPU time, start simultaneously. How long will the last one take to complete if they run sequentially? How long if they run in parallel? Assume 50% I/O wait.**
 
+If each process has a 50% wait time then it would take 30 minutes for a single one to run and 60 minutes if run sequentially. 
+
+With 2 processes at a 50% wait time the utilization is $1-0.5^2=0.75$, with each process getting $0.375$ of that $0.75$ total. The total runtime given $0.375$ of the CPU time is $20/0.375=53.\overline{3}$.
+
+So while a sequential execution will take 60 minutes, a parallel execution could complete in a little over 53 minutes.
+
 ## Problem 4
 **If a multithreaded process forks, a problem occurs if the child gets copies of all the parent’s threads. Suppose that one of the original threads was waiting for keyboard input. Now two threads are waiting for keyboard input, one in each process. Does this problem ever occur in single-threaded processes?**
+
+No, if a single threaded process is blocked while waiting for a keyboard input it wouldn't be able to fork because it's blocked.
 
 ## Problem 5
 **Assume that you are trying to download a large 2-GB file from the Internet. The file is available from a set of mirror servers, each of which can deliver a subset of the file’s bytes; assume that a given request specifies the starting and ending bytes of the file. Explain how you might use threads to improve the download time. Are there any possible bottlenecks in your proposed solution?**
 
+The process could create multiple threads and have them each download and write peices of the file to the shared memory space, dividing the download time by the number of threads. There is a bottleneck because all threads must share a network connection which has a limit on bandwidth.
+
 ## Problem 6
 **What are the two main functions of an operating system? What is the main function of a hypervisor? What are the differences between hypervisors and operating systems?**
+
+The main functions of an OS are managing the resources provided by the hardware, and abstracting upon that hardware to provide a better interface for programs.
+
+A hypervisor allows for virtualization of the operating system to provide multiple virtual machines, allows users to share the resources of one physical machine while still providing isolation for any applications that the user may be running.
+
+A hypervisor provides virtualization allowing multiple operating systems to run on one machine at the same time. The hypervisor allocates resources for the guest OS much like that OS in turn allocates resources for the applications it runs.
