--- a/cs492a-operating-systems/hw/02.md
+++ b/cs492a-operating-systems/hw/02.md
@@ -4,12 +4,12 @@
 ## Problem 1
 **Does the busy waiting solution using the turn variable (Fig. 2-23 in the book) work when two processes are running on a shared-memory multiprocessor, that is, two CPUs sharing a common memory?**
 
-Answer
+Yes, it will work but there will still be busy waiting ocurring
 
 ## Problem 2
 **Does Peterson’s solution to the mutual-exclusion problem shown in Fig. 2-24 in the book work when process scheduling is preemptive? How about when it is nonpreemptive?**
 
-Answer
+Yes, it works in the preemptive case, but in the non-preemptive case is has the potential to fail
 
 ## Problem 3
 **Five batch jobs. A through E, arrive at a computer center at almost the same time. They have estimated running times of 10, 6, 2, 4, and 8 minutes. Their (externally determined) priorities are 3, 5, 2, 1, and 4, respectively, with 5 being the highest priority. For each of the following scheduling algorithms, determine the mean process turnaround time. Ignore process switching overhead.**
@@ -20,16 +20,62 @@ Answer
 
 **For (a), assume that the system is multiprogrammed, and that each job gets its fair share of the CPU. For (b) through (d), assume that only one job at a time runs, until it finishes. All jobs are completely CPU bound.**
 
-Answer
+| Process | Runtime | Priority |
+| :-:     | :-:     | :-:      |
+| A       | 10      | 3        |
+| B       | 6       | 5        |
+| C       | 2       | 2        |
+| D       | 4       | 1        |
+| E       | 8       | 4        |
+
+### Priority Scheduling
+With priority scheduling the order of executive will be D=>C=>A=>E=>B, with turnaround times:
+| Process | Wait time | Execution time | Total |
+| :-: | :-: | :-: | :-: |
+| D | 0 | 4 | 4 |
+| C | 4 | 2 | 6 |
+| A | 6 | 10 | 16 |
+| E | 16 | 8 | 24 |
+| B | 24 | 6 | 30 |
+
+$$\mu_{turnaround} = \frac{4+6+16+24+30}{5} = 16$$
+
+### First-Come First-Served
+
+| Process | Wait time | Execution time | Total |
+| :-: | :-: | :-: | :-: |
+| A | 0 | 10 | 10 |
+| B | 10 | 6 | 16 |
+| C | 16 | 2 | 18 |
+| D | 18 | 4 | 22 |
+| E | 22 | 8 | 30 |
+
+$$\mu_{turnaround} = \frac{10+16+18+22+30}{5} = \frac{96}{5} = 19.2 $$
+
+### Shortest Job First
+| Process | Wait time | Execution time | Total |
+| :-: | :-: | :-: | :-: |
+| C | 0 | 2 | 2 |
+| D | 2 | 4 | 6 |
+| B | 6 | 6 | 12 |
+| E | 12 | 8 | 20 |
+| A | 20 | 10 | 30 |
+
+$$\mu_{turnaround} = \frac{2+6+12+20+30}{5} =  14$$
 
 ## Problem 4
 **A soft real-time system has four periodic events with periods of 50, 100, 200, and 250 msec each. Suppose that the four events require 35, 20, 10, and $x$ msec of CPU time, respectively. What is the largest value of $x$ for which the system is schedulable?**
+$$
+\frac{35}{50} +
+\frac{20}{100} +
+\frac{10}{200} +
+\frac{x}{250} < 1
+$$
+$$ x < \frac{25}{2} $$
 
-Answer
+The largest value to $x$ to still be scheduleable is 12.5
 
 ## Problem 5
 **Consider the following state of a system with four processes, P1, P2, P3, and P4, and five types of resources, RS1, RS2, RS3, RS4, and RS5:**
 ![tables](https://i.gyazo.com/fe029892468cc69c7dddc04ac198fcd8.png)
 **Using the deadlock detection algorithm described in Section 6.4.2, show that there is a deadlock in the system. Identify the processes that are deadlocked.**
-
-Answer
