--- a/cs519a-intro-to-ecommerce/notes/20190325.md
+++ b/cs519a-intro-to-ecommerce/notes/20190325.md
@@ -67,3 +67,4 @@
 * Add code snippet for analytics to the page
 * Set up basic A/B testing
 * Under "Content Experiements" be sure to enable "Distribute traffic evenly across all variants"
+* **Projects due May 6th**
